@@ -325,6 +325,24 @@
 
     "imported/w3c/webdriver/tests/perform_actions/pointer.py": {
         "subtests": {
+            "test_drag_and_drop_with_draggable_element[0]": {
+                "expected": {
+                    "gtk": {"status": ["FAIL"], "bug": "webkit.org/b/157179"},
+                    "wpe": {"status": ["FAIL"], "bug": "webkit.org/b/214141"}
+                }
+            },
+            "test_drag_and_drop_with_draggable_element[300]": {
+                "expected": {
+                    "gtk": {"status": ["FAIL"], "bug": "webkit.org/b/157179"},
+                    "wpe": {"status": ["FAIL"], "bug": "webkit.org/b/214141"}
+                }
+            },
+            "test_drag_and_drop_with_draggable_element[800]": {
+                "expected": {
+                    "gtk": {"status": ["FAIL"], "bug": "webkit.org/b/157179"},
+                    "wpe": {"status": ["FAIL"], "bug": "webkit.org/b/214141"}
+                }
+            },
             "test_no_top_browsing_context": {
                 "expected": {"wpe": {"status": ["FAIL"], "bug": "webkit.org/b/212950"}}
             },
@@ -1201,6 +1219,13 @@
         }
     },
 
+    "imported/w3c/webdriver/tests/take_element_screenshot/iframe.py": {
+        "subtests": {
+            "test_frame_element": {
+                "expected": {"all": {"status": ["FAIL"], "bug": "webkit.org/b/226134"}}
+            }
+        }
+    },
 
     "imported/w3c/webdriver/tests/take_element_screenshot/screenshot.py": {
         "subtests": {
